force-app/main/default/objects/Revenue_Statement_Report__c/Revenue_Statement_Report__c.object-meta.xml
<CustomObject>
    <label>Revenue Statement Report</label>
    <nameField>
        <label>Revenue Statement Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Statement Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>