force-app/main/default/objects/Revenue_Statement_Report__c/fields/Actual_Revenue_Same_Period__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Same_Period__c</fullName>
    <label>Actual Revenue(Same Period)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>