force-app/main/default/objects/Revenue_Statement_Report__c/fields/Actual_Revenue_Same_Period_USD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Same_Period_USD__c</fullName>
    <label>Actual Revenue(Same Period USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>