force-app/main/default/objects/Revenue_Statement_Report__c/fields/Collection_Overdue_Times__c.field-meta.xml
<CustomField>
    <fullName>Collection_Overdue_Times__c</fullName>
    <label>Collection Overdue Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>