force-app/main/default/objects/Revenue_Statement_Report__c/fields/Compared_To_Planning__c.field-meta.xml
<CustomField>
    <fullName>Compared_To_Planning__c</fullName>
    <formula>IF(N_Year_Planned_Accumulated_Revenue__c  =  0, 0, N_Year_Actual_Accumulated_Revenue__c  /  N_Year_Planned_Accumulated_Revenue__c)</formula>
    <label>Compared To Planning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>