force-app/main/default/objects/Revenue_Statement_Report__c/fields/Compared_To_Same_Period__c.field-meta.xml
<CustomField>
    <fullName>Compared_To_Same_Period__c</fullName>
    <formula>IF(Actual_Revenue_Same_Period__c=0,0,N_Year_Actual_Accumulated_Revenue__c  /  Actual_Revenue_Same_Period__c)</formula>
    <label>Compared To Same Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>