force-app/main/default/objects/Revenue_Statement_Report__c/fields/Cooperate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cooperate_Start_Date__c</fullName>
    <label>Cooperate Start Date</label>
    <type>Date</type>
</CustomField>