force-app/main/default/objects/Revenue_Statement_Report__c/fields/Cooperated_Store_Qty__c.field-meta.xml
<CustomField>
    <fullName>Cooperated_Store_Qty__c</fullName>
    <label>Cooperated Store Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>