force-app/main/default/objects/Revenue_Statement_Report__c/fields/Credit_Rank__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rank__c</fullName>
    <label>Credit Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>