force-app/main/default/objects/Revenue_Statement_Report__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name(del)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>