force-app/main/default/objects/Revenue_Statement_Report__c/fields/Customer_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Product Line</label>
    <referenceTo>Customer_Product_Line__c</referenceTo>
    <relationshipName>Revenue_Statement_Report</relationshipName>
    <type>Lookup</type>
</CustomField>