force-app/main/default/objects/Revenue_Statement_Report__c/fields/Customer_Rank__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rank__c</fullName>
    <label>Customer Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>