force-app/main/default/objects/Revenue_Statement_Report__c/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>