force-app/main/default/objects/Revenue_Statement_Report__c/fields/Industry_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Industry_Ranking__c</fullName>
    <label>Industry Ranking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>