force-app/main/default/objects/Revenue_Statement_Report__c/fields/Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Market_Share__c</fullName>
    <label>Market Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>