force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_2_Year_s_Actual_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>N_2_Year_s_Actual_Revenue_USD__c</fullName>
    <label>N-2 Year&apos;s Actual Revenue(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>