force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_M1_Year_Accumulated_Gross_Profit_Ratio__c.field-meta.xml
<CustomField>
    <fullName>N_M1_Year_Accumulated_Gross_Profit_Ratio__c</fullName>
    <label>N-1 Year&apos;s Accumulated Gross Profit Rto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>