force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_M2_Year_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>N_M2_Year_Actual_Revenue__c</fullName>
    <label>N-2 Year&apos;s Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>