force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_P1_Year_Target_Of_Inhouse_Share__c.field-meta.xml
<CustomField>
    <fullName>N_P1_Year_Target_Of_Inhouse_Share__c</fullName>
    <label>N+1 Year&apos;s Target of Inhouse Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>