force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_Year_Actual_Accumulated_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>N_Year_Actual_Accumulated_Revenue_USD__c</fullName>
    <label>N Year&apos;s Actual Accumulated Revenue(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>