force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_Year_Actual_Inhouse_Share__c.field-meta.xml
<CustomField>
    <fullName>N_Year_Actual_Inhouse_Share__c</fullName>
    <label>N Year&apos;s Actual Inhouse Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>