force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_Year_Planned_Accumulated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>N_Year_Planned_Accumulated_Revenue__c</fullName>
    <label>N Year&apos;s Planned Accumulated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>