force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_Year_Planned_Accumulated_Revenue_US__c.field-meta.xml
<CustomField>
    <fullName>N_Year_Planned_Accumulated_Revenue_US__c</fullName>
    <label>N Year Planned Accumulated Revenue(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>