force-app/main/default/objects/Revenue_Statement_Report__c/fields/N_Year_s_Planned_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>N_Year_s_Planned_Revenue_USD__c</fullName>
    <label>N Year&apos;s Planned Revenue(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>