force-app/main/default/objects/Revenue_Statement_Report__c/fields/Planned_Eliminate_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Eliminate_Date__c</fullName>
    <label>Planned Eliminate Date</label>
    <type>Date</type>
</CustomField>