force-app/main/default/objects/Revenue_Statement_Report__c/fields/YOY_Gross_Profit_Ratio__c.field-meta.xml
<CustomField>
    <fullName>YOY_Gross_Profit_Ratio__c</fullName>
    <formula>N_Year_Accumulated_Gross_Profit_Ratio__c  -  N_M1_Year_Accumulated_Gross_Profit_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y.O.Y(Gross Profit Ratio)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>