force-app/main/default/objects/Revenue_Statement_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Actual_Revenue_Same_Period_USD__c</columns>
    <columns>N_Year_Actual_Accumulated_Revenue_USD__c</columns>
    <columns>N_Year_Planned_Accumulated_Revenue_US__c</columns>
    <columns>N_Year_s_Planned_Revenue_USD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>